fix restore sesstion for arch linux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,11 @@ bind | split-window -h
 unbind '"'
 bind - split-window -v
 
+# rebind open window in current dir
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
+# bind reload tmux config
 unbind r
 bind r source-file ~/.tmux.conf
 
@@ -44,6 +49,10 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect' 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
+
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-systemd-start-cmd 'on'
 
 # fix window naming
 set -g @catppuccin_window_default_text "#W"
