update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,14 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# image preview
+# set -gq allow-passthrough on
+# set -g visual-activity off
+
+set -g allow-passthrough all
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # rebind keys for split window
 unbind %
 bind | split-window -h 
@@ -45,6 +53,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
+
+# plugins for copy/paste and search/grep
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
 # plugins for sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect' 
 set -g @plugin 'tmux-plugins/tmux-continuum'
