--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,11 +48,18 @@ bind -r h resize-pane -L 5
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
+# Configure the catppuccin
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
+run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
 
 # plugins for copy/paste and search/grep
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -67,8 +74,5 @@ set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-systemd-start-cmd 'on'
 
-# fix window naming
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
-
 run '~/.tmux/plugins/tpm/tpm'
+
