--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,12 +50,13 @@ bind -n M-L next-window
 
 # Configure the catppuccin
 set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
-run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
+run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux' # Load plugin
+
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
