--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,12 +49,21 @@ bind -n M-H previous-window
 bind -n M-L next-window
 
 # Configure the catppuccin
+set -g @ctp_bg "#24273a"
+set -g @ctp_surface_1 "#494d64"
+set -g @ctp_fg "#cad3f5"
+set -g @ctp_mauve "#c6a0f6"
+set -g @ctp_yellow "#eed49f"
 set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_window_text " #W"
 set -g @catppuccin_window_current_text " #W"
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ogq @catppuccin_window_text_color "#{@ctp_mauve}"
+set -ogq @catppuccin_window_number_color "#{@ctp_mauve}"
+# set -ogq @catppuccin_window_current_text_color "#{@ctp_fg}"
+set -ogq @catppuccin_window_current_number_color "#{@ctp_yellow}"
 run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux' # Load plugin
 
 
