add support for rearranging windows order

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,11 @@ bind -r h resize-pane -L 5
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Move window left (swap with previous) Alt + <-
+bind -n M-Left swap-window -t -1
+# Move window right (swap with next) Alt + ->
+bind -n M-Right swap-window -t +1
+
 # Configure the catppuccin
 set -g @ctp_bg "#24273a"
 set -g @ctp_surface_1 "#494d64"
