--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,28 +53,11 @@ bind -n M-Left swap-window -t -1
 # Move window right (swap with next) Alt + ->
 bind -n M-Right swap-window -t +1
 
-# Configure the catppuccin
-set -g @ctp_bg "#24273a"
-set -g @ctp_surface_1 "#494d64"
-set -g @ctp_fg "#cad3f5"
-set -g @ctp_mauve "#c6a0f6"
-set -g @ctp_yellow "#eed49f"
-set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_window_text " #W"
-set -g @catppuccin_window_current_text " #W"
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-# set -ogq @catppuccin_window_text_color "#{@ctp_mauve}"
-set -ogq @catppuccin_window_number_color "#{@ctp_mauve}"
-# set -ogq @catppuccin_window_current_text_color "#{@ctp_fg}"
-set -ogq @catppuccin_window_current_number_color "#{@ctp_yellow}"
-run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux' # Load plugin
-
-
+set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
 
 # plugins for copy/paste and search/grep
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -89,5 +72,8 @@ set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-systemd-start-cmd 'on'
 
-run '~/.tmux/plugins/tpm/tpm'
+# fix window naming
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
 
+run '~/.tmux/plugins/tpm/tpm'
